# project_templates

./: README.md
c_cpp/: .editorconfig  .gitignore  CMakeLists.txt
c_cpp/ansible/: playbook_setup_environment.yml
c_cpp/cmake/: CxxTest.cmake  Doxygen.cmake
c_cpp/doc/: CMakeLists.txt  Doxyfile
c_cpp/doc/manual/: getting_started.md
c_cpp/src/: CMakeLists.txt
c_cpp/src/example/: CMakeLists.txt  example.cpp  io.cpp  io.hpp
c_cpp/test/example/: CMakeLists.txt  IoTest.hpp
c_cpp/tools/: eclipse_formatter_c-cpp.xml
cpp_conan/: .clang-tidy  .editorconfig  CHANGELOG.md  CMakeLists.txt  conanfile.py
cpp_conan/cmake/: ClangTidy.cmake  clang-tidy.cmake  cppcheck.cmake
cpp_conan/doc/: CMakeLists.txt  Doxyfile.in
cpp_conan/doc/manual/: getting_started.md  main.md
cpp_conan/src/: CMakeLists.txt
cpp_conan/src/example/: CMakeLists.txt  example.cpp  io.hpp
cpp_conan/test/: CMakeLists.txt
cpp_conan/test/example/: CMakeLists.txt  io_test.cpp
python/: MANIFEST.in  README.md  example.py  requirements-dev.txt  requirements.txt  setup.py  setup_commands.py
python/doc/: conf.py
python/doc/html/: template_manual.html
python/doc/manual/: getting_started.md
python/doc/sphinx/: conf.py  index.rst
python/docs/: conf.py  index.rst
python/docs/manual/: CHANGELOG.md  getting_started.md
python/example/: __init__.py  __main__.py  example.py  io.py  sub_commands.py
python/tools/: pylintrc
python_distutils/: .gitignore  README.md  example.py  requirements-dev.txt  setup.py  setup_commands.py
python_distutils/docs/manual/: CHANGELOG.md  getting_started.md
python_distutils/example/: cmdline.py
python_distutils/tests/example/: test_io.py
python_tox/: .gitignore  README.md  pyproject.toml  requirements.txt  setup.cfg  tox.ini
python_tox/docs/: CHANGELOG.md  conf.py  getting_started_for_developers.md  index.rst
python_tox/src/example/: __init__.py  __main__.py  cmdline.py  io.py
