[metadata]
name = PyExample
description = "A template project for Python."
long_description = file: README.md
long_description_content_type = text/plain
readme = "README.md"
author = Christof Pieloth
author_email = christof@example.org

classifiers =
    Programming Language :: Python :: 3

[options]
packages = find:
package_dir=
    =src
install_requires = file:src/requirements.txt

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
    example  = example.__main__:main

[pycodestyle]
# keep in-sync with .editorconfig, pylint.*
max-line-length = 120
statistics = True

[pylint.FORMAT]
# keep in-sync with .editorconfig, pycodestyle
max-line-length = 120
